--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "dependencies": {
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
+    "@tanstack/react-query": "^5.7.2",
     "autoprefixer": "10.4.15",
     "geist": "^1.0.0",
     "next": "latest",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-loader-spinner": "^5.4.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.3"
   },
