header + menu + theme and lang switchers

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,15 @@
 {
   "cSpell.words": [
+    "languagedetector",
+    "Lngs",
     "shefer",
     "supabase",
     "Supabase",
     "tailwindcss",
-    "tanstack"
+    "tanstack",
+    "Аккаунт",
+    "Каталог",
+    "Контакты",
+    "Переключить"
   ]
 }
