--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tanstack/react-query": "^5.7.2",
+    "accept-language": "^3.0.18",
     "autoprefixer": "10.4.15",
     "geist": "^1.0.0",
+    "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-resources-to-backend": "^1.2.0",
     "next": "latest",
-    "postcss": "8.4.29",
+    "next-themes": "^0.2.1",
+    "postcss": "^8.4.31",
     "react": "18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-i18next": "^13.4.1",
     "react-loader-spinner": "^5.4.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.3"
