--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next": "latest",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
+    "ra-supabase": "^2.0.4",
     "react": "18.2.0",
+    "react-admin": "^4.16.0",
     "react-cookie": "^6.1.1",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
