--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix"
   },
   "dependencies": {
     "@supabase/ssr": "latest",
@@ -18,7 +20,6 @@
     "next": "latest",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
-    "ra-supabase": "^2.0.4",
     "react": "18.2.0",
     "react-admin": "^4.16.0",
     "react-cookie": "^6.1.1",
@@ -33,6 +34,8 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "eslint": "8.55.0",
+    "eslint-config-next": "14.0.4"
   }
 }
