--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,12 +32,7 @@
     "react-hooks/exhaustive-deps": "warn",
     "semi": "off",
     "import/no-cycle": "off",
-    "max-len": [
-      "warn",
-      {
-        "code": 140
-      }
-    ],
+    "max-len": "off",
     "no-nested-ternary": "off",
     "react/require-default-props": "off"
   },
