--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@tanstack/react-query": "^5.7.2",
     "accept-language": "^3.0.18",
     "autoprefixer": "10.4.15",
+    "bufferutil": "^4.0.8",
     "geist": "^1.0.0",
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-resources-to-backend": "^1.2.0",
-    "next": "latest",
+    "next": "13.5.6",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.31",
     "react": "18.2.0",
@@ -28,7 +29,8 @@
     "react-i18next": "^13.4.1",
     "react-loader-spinner": "^5.4.5",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "utf-8-validate": "^6.0.3"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
