hero block done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,10 @@
     "Выйти",
     "Каталог",
     "Контакты",
-    "Переключить"
+    "макияжа",
+    "оборудование",
+    "Переключить",
+    "перманентного",
+    "Пигменты"
   ]
 }
