--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,13 +3,18 @@
     "bufferutil",
     "commentable",
     "Datagrid",
+    "embla",
+    "Embla",
     "languagedetector",
+    "lightbox",
+    "Lightbox",
     "Lngs",
     "shefer",
     "supabase",
     "Supabase",
     "tailwindcss",
     "tanstack",
+    "wiesbdispmispsuqfjne",
     "Админка",
     "Аккаунт",
     "Войти",
