--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
-    "@next/font": "^14.0.4",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tanstack/react-query": "^5.7.2",
     "accept-language": "^3.0.18",
     "autoprefixer": "10.4.15",
     "bufferutil": "^4.0.8",
+    "embla-carousel-react": "^8.0.0-rc15",
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-resources-to-backend": "^1.2.0",
@@ -30,7 +30,8 @@
     "react-loader-spinner": "^5.4.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.3",
-    "utf-8-validate": "^6.0.3"
+    "utf-8-validate": "^6.0.3",
+    "yet-another-react-lightbox": "^3.15.6"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
