--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.words": [
+    "autoplay",
     "bufferutil",
     "commentable",
     "Datagrid",
@@ -25,6 +26,8 @@
     "оборудование",
     "Переключить",
     "перманентного",
-    "Пигменты"
+    "Пигменты",
+    "популярное",
+    "смотреть"
   ]
 }
