--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "accept-language": "^3.0.18",
     "autoprefixer": "10.4.15",
     "bufferutil": "^4.0.8",
+    "embla-carousel-autoplay": "^8.0.0-rc15",
     "embla-carousel-react": "^8.0.0-rc15",
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
