new static block

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,16 +18,25 @@
     "wiesbdispmispsuqfjne",
     "Админка",
     "Аккаунт",
+    "брендовые",
+    "бьюти",
     "Войти",
     "Выйти",
+    "индустрии",
     "Каталог",
     "Контакты",
     "макияжа",
+    "машинки",
     "оборудование",
+    "оригинальных",
     "Переключить",
     "перманентного",
+    "пигментов",
     "Пигменты",
     "популярное",
-    "смотреть"
+    "смотреть",
+    "стран",
+    "тату",
+    "экспорта"
   ]
 }
