added simple footer. fixed favicon

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
     "бьюти",
     "Войти",
     "Выйти",
+    "защищены",
     "индустрии",
     "Каталог",
     "Контакты",
@@ -34,6 +35,7 @@
     "пигментов",
     "Пигменты",
     "популярное",
+    "права",
     "смотреть",
     "стран",
     "тату",
