added partner block

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,6 +20,7 @@
     "Аккаунт",
     "брендовые",
     "бьюти",
+    "вами",
     "Войти",
     "Выйти",
     "защищены",
@@ -29,17 +30,33 @@
     "макияжа",
     "машинка",
     "машинки",
+    "Нажимая",
+    "нашим",
     "оборудование",
+    "обязательно",
     "оригинальных",
+    "Оставьте",
+    "ОТПРАВИТЬ",
+    "оферты",
+    "партнером",
     "Переключить",
     "перманентного",
     "пигментов",
     "Пигменты",
     "популярное",
+    "почта",
     "права",
+    "принимаете",
+    "публичной",
+    "свои",
+    "свяжемся",
     "смотреть",
+    "стать",
     "стран",
     "тату",
+    "Телефон",
+    "условия",
+    "хотите",
     "экспорта"
   ]
 }
