added laptop catalog filter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "lightbox",
     "Lightbox",
     "Lngs",
+    "Merch",
     "shefer",
     "supabase",
     "Supabase",
@@ -19,10 +20,13 @@
     "Админка",
     "Аккаунт",
     "брендовые",
+    "Брови",
     "бьюти",
     "вами",
+    "Веки",
     "Войти",
     "Выйти",
+    "Губы",
     "защищены",
     "индустрии",
     "Каталог",
@@ -30,6 +34,7 @@
     "макияжа",
     "машинка",
     "машинки",
+    "Мерч",
     "Нажимая",
     "нашим",
     "оборудование",
@@ -56,6 +61,7 @@
     "тату",
     "Телефон",
     "условия",
+    "фильтр",
     "хотите",
     "экспорта"
   ]
