--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,10 +27,13 @@
     "Войти",
     "Выйти",
     "Губы",
+    "добавить",
     "защищены",
+    "идеально",
     "индустрии",
     "Каталог",
     "Контакты",
+    "корзину",
     "макияжа",
     "машинка",
     "машинки",
@@ -43,6 +46,7 @@
     "Оставьте",
     "ОТПРАВИТЬ",
     "оферты",
+    "паре",
     "партнером",
     "Переключить",
     "перманентного",
