--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,6 @@
       }
     ],
     "import/prefer-default-export": "off",
-    "no-unused-vars": "warn",
     "no-console": "warn",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
@@ -34,7 +33,8 @@
     "import/no-cycle": "off",
     "max-len": "off",
     "no-nested-ternary": "off",
-    "react/require-default-props": "off"
+    "react/require-default-props": "off",
+    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" } ]
   },
   "parserOptions": {
     "ecmaVersion": 2020,
