--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
     "shefer",
     "supabase",
     "Supabase",
+    "swiper",
+    "Swiper",
     "tailwindcss",
     "tanstack",
     "wiesbdispmispsuqfjne",
