--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.4.1",
     "react-loader-spinner": "^5.4.5",
+    "swiper": "^11.0.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.3",
     "utf-8-validate": "^6.0.3",
