--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,7 +24,14 @@
       }
     ],
     "import/prefer-default-export": "off",
-    "no-console": "warn",
+    "no-console": [
+      "warn",
+      {
+        "allow": [
+          "error"
+        ]
+      }
+    ],
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
     "react-hooks/rules-of-hooks": "error",
@@ -34,7 +41,12 @@
     "max-len": "off",
     "no-nested-ternary": "off",
     "react/require-default-props": "off",
-    "no-unused-vars": ["warn", { "argsIgnorePattern": "^_" } ]
+    "no-unused-vars": [
+      "warn",
+      {
+        "argsIgnorePattern": "^_"
+      }
+    ]
   },
   "parserOptions": {
     "ecmaVersion": 2020,
