--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,8 @@
     "shefer",
     "supabase",
     "Supabase",
+    "swiper",
+    "Swiper",
     "tailwindcss",
     "tanstack",
     "wiesbdispmispsuqfjne",
@@ -27,10 +29,13 @@
     "Войти",
     "Выйти",
     "Губы",
+    "добавить",
     "защищены",
+    "идеально",
     "индустрии",
     "Каталог",
     "Контакты",
+    "корзину",
     "макияжа",
     "машинка",
     "машинки",
@@ -43,6 +48,7 @@
     "Оставьте",
     "ОТПРАВИТЬ",
     "оферты",
+    "паре",
     "партнером",
     "Переключить",
     "перманентного",
@@ -64,5 +70,6 @@
     "фильтр",
     "хотите",
     "экспорта"
-  ]
+  ],
+  "CodeGPT.apiKey": "Anthropic"
 }
