--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,14 +24,7 @@
       }
     ],
     "import/prefer-default-export": "off",
-    "no-console": [
-      "warn",
-      {
-        "allow": [
-          "error"
-        ]
-      }
-    ],
+    "no-console": "warn",
     "react/jsx-uses-react": "off",
     "react/react-in-jsx-scope": "off",
     "react-hooks/rules-of-hooks": "error",
