--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "codegen": "npx openapi-typescript http://178.128.30.157:1337/documentation/v1.0.0 --output ./types/strapi.ts"
   },
   "dependencies": {
     "@supabase/ssr": "latest",
@@ -30,7 +31,9 @@
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.4.1",
     "react-loader-spinner": "^5.4.5",
+    "strapi-sdk-js": "^2.3.3",
     "swiper": "^11.0.5",
+    "swr": "^2.2.5",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.3",
     "utf-8-validate": "^6.0.3",
@@ -42,6 +45,7 @@
     "@types/react-dom": "18.2.5",
     "encoding": "^0.1.13",
     "eslint": "8.55.0",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "openapi-typescript": "^7.0.2"
   }
 }
