--- a/package.json
+++ b/package.json
@@ -43,9 +43,12 @@
     "@types/node": "20.3.1",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.5",
+    "@typescript-eslint/eslint-plugin": "^6.21.1-alpha.1",
+    "@typescript-eslint/parser": "^7.17.0",
     "encoding": "^0.1.13",
-    "eslint": "8.55.0",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "openapi-typescript": "^7.0.2"
   }
 }
