added field forms to order

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     "Lngs",
     "Merch",
     "openapi",
+    "sdek",
     "shefer",
     "strapi",
     "Strapi",
@@ -79,6 +80,8 @@
     "публичной",
     "свои",
     "свяжемся",
+    "сдэк",
+    "Сдэк",
     "смотреть",
     "стать",
     "стран",
